--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>To jest nie po angelsku</p>
-</body>
-</html>
+
+<h1> Всі вимоги, щоб бути ідеальною дівчиною</h1>
+<p>
+    В цій статті коротко розповідається якою має бути ідеальна дівчина.
+</p>
+<h2>Вимоги</h2>
+<ul>
+    <li><img
+            scr="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.vika-color.ru%2Fcatalog%2Fproduct%2Flogotipy-vika&psig=AOvVaw28MvUI0A25tuQl_Z-TA7XL&ust=1741974994469000&source=images&cd=vfe&opi=89978449&ved=2ahUKEwjfxqXX0IeMAxXvUVUIHTMLFtUQjRx6BAgAEBk" />
+    </li>
+    <li></li>
+</ul>
