--- a/Vika.html
+++ b/Vika.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <p>To jest nie po angelsku</p>
-</body>
-
-</html>
+<h1> Всі вимоги, щоб бути ідеальною дівчиною</h1>
+<p>
+    В цій статті коротко розповідається якою має бути ідеальна дівчина.
+</p>
+<p>
+<h2>Вимоги</h2>
+<ul>
+    <li>Ім'я Віка</li>
+    <li>Зріст не більше 1 метра 50 сантиметрів</li>
+    <li>Розумна</li>
+    <li>Ну і взагалі така хорошенька</li>
+</ul>
+</p>
