--- a/Vika.html
+++ b/Vika.html
@@ -1,11 +1,25 @@
-<h1> Всі вимоги, щоб бути ідеальною дівчиною</h1>
-<p>
-    В цій статті коротко розповідається якою має бути ідеальна дівчина.
-</p>
-<h2>Вимоги</h2>
-<ol>
-    <li>Ім'я Віка</li>
-    <li>Зріст не більше 1 метра 50 сантиметрів</li>
-    <li>Розумна</li>
-    <li>Ну і взагалі така хорошенька</li>
-</ol>
+<!DOCTYPE html>
+<html lang="uk">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ідеальна дівчина</title>
+</head>
+
+<body>
+
+    <h1>Всі вимоги, щоб бути ідеальною дівчиною</h1>
+    <p>В цій статті коротко розповідається, якою має бути ідеальна дівчина.</p>
+
+    <h2>Вимоги</h2>
+    <ol>
+        <li>Ім'я Віка</li>
+        <li>Зріст не більше 1 метра 50 сантиметрів</li>
+        <li>Розумна</li>
+        <li>Має приємну зовнішність</li>
+    </ol>
+
+</body>
+
+</html>
